# spotbak

./: .gitignore  README.md  app_setup.sh  pyproject.toml  requirements.txt  server.js  setup.py  start.sh
lib/: spotbak.py
public/: style.css
views/: albums.ejs  artists.ejs  dataset.ejs  error.ejs  index.ejs  layout.ejs  playlists.ejs  tracks.ejs
